--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/_redirects",
               {
                 "glob": "_redirects",
                 "input": "src",
